fix: remove unnecessary scrollbar in code snippet

--- a/assets/css/_shortcodes.scss
+++ b/assets/css/_shortcodes.scss
@@ -206,7 +206,6 @@
       padding: 0;
       margin: 0;
       position: relative;
-      overflow: scroll;
 
       // Single-line
       &:not(:has(.hljs-ln)) {
